--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                   <li class="nav-item">
                     <a class="nav-link" href="#faq">FAQ</a>
                   </li>
-                  <li><button class="main-btn">1200 345 123</button></li>
+                  <li><button class="main-btn">9988 998803</button></li>
                 </ul>
               </div>
             </div>
@@ -72,7 +72,6 @@
                 </div>
             </div>
         </div>
-
     </section>
     <!-- section-1 ends -->
     <!-- section-2 counter -->
@@ -137,7 +136,7 @@
                         <ul class="list-unstyled py-3">
                             <li>Pizzas</li>
                             <li>Burgers</li>
-                            <li>Noodles</li>
+                            <li>Bread</li>
                         </ul>      
                         <button class="main-btn mt-4">Learn More</button>
                     </div>
@@ -190,7 +189,7 @@
                             <div class="pt-3">
                                 <h4>Rainbow Vegetable Sandwich</h4>
                                 <p>Time: 15 -20 Minutes | Serves : 1</p>
-                                <span>$10.50 <del>$11.70</del></span>
+                                <span>&#8377;70.50 <del>&#8377;100.80</del></span>
                                 <button class="mt-4 main-btn">Order Now</button>
                             </div>
                         </div>
@@ -202,7 +201,7 @@
                             <div class="pt-3">
                                 <h4>Vegetarian Burger</h4>
                                 <p>Time: 30 -45 Minutes | Serves : 1</p>
-                                <span>$9.20 <del>$10.50</del></span>
+                                <span>&#8377;65.50 <del>&#8377;76.88</del></span>
                                 <button class="mt-4 main-btn">Order Now</button>
                             </div>
                         </div>
@@ -214,7 +213,7 @@
                             <div class="pt-3">
                                 <h4>Raspberry Stuffed French Toast</h4>
                                 <p>Time: 10 - 15 Minutes | Serves : 1</p>
-                                <span>$12.50 <del>$13.20</del></span>
+                                <span>&#8377;100.00 <del>&#8377;150.90</del></span>
                                 <button class="mt-4 main-btn">Order Now</button>
                             </div>
                         </div>
@@ -231,7 +230,7 @@
         <div class="wrapper testimonial-section">
             <div class="container text-center">
                 <div class="text-center pb-4">
-                    <h2>testimonial</h2>
+                    <h2>Reviews</h2>
                 </div>
                 <div class="row">
                     <div class="col-sm-12 col-lg-10 offset-lg-1">
