--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                     <div class="col-sm-12">
                         <div class="footer-copy">
                             <div class="copy-right text-center pt-5">
-                                <p class="text-light">&copy; 2021. Foodies. All rights reserved.</p>
+                                <p class="text-light">&copy; 2021. Mamma in Cucina. All rights reserved.</p>
                             </div>
                         </div>
                     </div>
