--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                         <form action="" class="newsletter">
                             <div class="row">
                                 <div class="col-md-8 col-12">
-                                    <input type="email" class="form-control" placeholder="Email Address here" name="email">
+                                    <input type="email" class="form-control text-black" placeholder="Email Address here" name="email">
                                 </div>
                                 <div class="col-md-4 col-12">
                                     <button class="main-btn" type="submit">Subscribe</button>
